--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,6 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="context-root" value="cinefiles"/>
-        <property name="java-output-path" value="/cinefiles/build/classes"/>
+        <property name="java-output-path" value="/cinefiles/bin"/>
     </wb-module>
 </project-modules>
