BAMPFA-155 changes to browse titles, browse directors

--- a/WebContent/include/browsedirElist.jspf
+++ b/WebContent/include/browsedirElist.jspf
@@ -3,119 +3,119 @@
   <div id='browselist' name='browselist'>
     <div id='browseTable  name='browseTable'>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=25257'>Eames, Charles</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3740'>Elek, Judit</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=28787'>Erdem, Reha</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person25257'>Eames, Charles</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3740'>Elek, Judit</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person28787'>Erdem, Reha</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=25258'>Eames, Ray</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3755'>Elliott, Stephan</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3804'>Erdom, Reha</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person25258'>Eames, Ray</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3755'>Elliott, Stephan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3804'>Erdom, Reha</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=15487'>Eastman, Charles</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=15127'>Ellis, David R.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3805'>Erdöss, Pál</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person15487'>Eastman, Charles</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person15127'>Ellis, David R.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3805'>Erdöss, Pál</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=3676'>Eastwood, Clint</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=29834'>Elon, Danae</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=26407'>Erebara, Gëzim</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3676'>Eastwood, Clint</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29834'>Elon, Danae</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26407'>Erebara, Gëzim</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=3685'>Echeverria, Diego</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=29699'>Elorrieta, José María</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3807'>Erice, Víctor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3685'>Echeverria, Diego</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29699'>Elorrieta, José María</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3807'>Erice, Víctor</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=3687'>Edelstein, Simon</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=30482'>Elsanhouri, Taghreed</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3818'>Erman, John</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3687'>Edelstein, Simon</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person30482'>Elsanhouri, Taghreed</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3818'>Erman, John</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=23862'>Edgar, Tom</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3761'>Else, Jon</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=200'>Ermler, Fridrikh</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23862'>Edgar, Tom</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3761'>Else, Jon</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person200'>Ermler, Fridrikh</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=3693'>Edvardsson, Egill</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=32574'>Elton, Arthur</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=23971'>Erskine, Chester</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3693'>Edvardsson, Egill</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person32574'>Elton, Arthur</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23971'>Erskine, Chester</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=3694'>Edwall, Allan</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3763'>Elvey, Maurice</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3826'>Erskine, Maren</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3694'>Edwall, Allan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3763'>Elvey, Maurice</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3826'>Erskine, Maren</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=3695'>Edwards, Blake</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3766'>Ember, Judit</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3827'>Erskine, Reed</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3695'>Edwards, Blake</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3766'>Ember, Judit</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3827'>Erskine, Reed</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=15513'>Edwards, Harry</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3772'>Emmer, Luciano</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3834'>Escorel, Eduardo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person15513'>Edwards, Harry</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3772'>Emmer, Luciano</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3834'>Escorel, Eduardo</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=21386'>Edwards, Hilton</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3777'>Endfield, Cy</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=22254'>Estabrook, Howard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person21386'>Edwards, Hilton</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3777'>Endfield, Cy</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person22254'>Estabrook, Howard</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=17171'>Edwards, John</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=14009'>Engel, Erich</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3846'>Estelrich, Juan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person17171'>Edwards, John</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14009'>Engel, Erich</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3846'>Estelrich, Juan</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=3696'>Edzard, Christine</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3783'>Engel, Morris</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3849'>Estrada, Luis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3696'>Edzard, Christine</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3783'>Engel, Morris</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3849'>Estrada, Luis</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=25012'>Efteriades, Nick</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3784'>Engelbach, David</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=16440'>Eszterhas, Joe</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person25012'>Efteriades, Nick</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3784'>Engelbach, David</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person16440'>Eszterhas, Joe</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=3706'>Egilmaz, Ertam</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3788'>Engstfeld, Axel</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3852'>Eszterhas, Peter</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3706'>Egilmaz, Ertam</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3788'>Engstfeld, Axel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3852'>Eszterhas, Peter</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=3711'>Egoyan, Atom</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3790'>Enquist, Magnus</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3853'>Étaix, Pierre</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3711'>Egoyan, Atom</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3790'>Enquist, Magnus</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3853'>Étaix, Pierre</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=20453'>Ehrlich, David</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3791'>Enrico, Robert</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3859'>Eustache, Jean</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20453'>Ehrlich, David</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3791'>Enrico, Robert</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3859'>Eustache, Jean</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=14298'>Eigler, Gernot</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3792'>Enright, Ray</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=18744'>Evans, Marc</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14298'>Eigler, Gernot</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3792'>Enright, Ray</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person18744'>Evans, Marc</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=144'>Eisenstein, Sergei</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3798'>Epstein, Jean</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3865'>Evstutieva, Mariana</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person144'>Eisenstein, Sergei</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3798'>Epstein, Jean</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3865'>Evstutieva, Mariana</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=2617'>El Cheik, Kamal</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=13680'>Epstein, Jerry</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3870'>Eymeric, Christine</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2617'>El Cheik, Kamal</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13680'>Epstein, Jerry</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3870'>Eymeric, Christine</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=25036'>el Sissi, Azza</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3800'>Epstein, Marie</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=33610'>Eyre, Chris</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person25036'>el Sissi, Azza</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3800'>Epstein, Marie</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person33610'>Eyre, Chris</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=29293'>Eldridge, John</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3801'>Epstein, Robert</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=3875'>Ezra, Mark</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29293'>Eldridge, John</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3801'>Epstein, Robert</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3875'>Ezra, Mark</a></td>
       </tr>
     </table>
   </div>
