--- a/WebContent/include/browsedirJlist.jspf
+++ b/WebContent/include/browsedirJlist.jspf
@@ -3,134 +3,134 @@
   <div id='browselist' name='browselist'>
     <table id='browseTable' name='browseTable'>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5775'>Jabór, Arnaldo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5835'>Jang Sun-Woo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5930'>Johnson, Lamont</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5775'>Jabór, Arnaldo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5835'>Jang Sun-Woo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5930'>Johnson, Lamont</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=28817'>Jack, Del</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5839'>Janigro, Angiola</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5933'>Johnson, Patrick Read</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person28817'>Jack, Del</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5839'>Janigro, Angiola</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5933'>Johnson, Patrick Read</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=19101'>Jackson, Jane</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5840'>Janisch, Attila</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=17550'>Johnson, Tim</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person19101'>Jackson, Jane</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5840'>Janisch, Attila</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person17550'>Johnson, Tim</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5786'>Jackson, Peter</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=20449'>Jarcho, Bill</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=17597'>Jokel, Lana</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5786'>Jackson, Peter</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20449'>Jarcho, Bill</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person17597'>Jokel, Lana</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5788'>Jackson, Wilfred</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=381'>Jarman, Derek</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5952'>Jones, Andy</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5788'>Jackson, Wilfred</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person381'>Jarman, Derek</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5952'>Jones, Andy</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5793'>Jacobs, Alan</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5852'>Jarmusch, Jim</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5962'>Jones, Michael</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5793'>Jacobs, Alan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5852'>Jarmusch, Jim</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5962'>Jones, Michael</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=13061'>Jacobs, Jim</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5854'>Jarrott, Charles</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=2636'>Jong Cheung-Tsang</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13061'>Jacobs, Jim</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5854'>Jarrott, Charles</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2636'>Jong Cheung-Tsang</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5797'>Jacobs, Ken</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5860'>Jasný, Vojtech</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5966'>Jong, Ate de</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5797'>Jacobs, Ken</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5860'>Jasný, Vojtech</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5966'>Jong, Ate de</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5799'>Jacobs, Lawrence-Hilton</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=23758'>Jason, Leigh</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5968'>Jongbloed, Marijke</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5799'>Jacobs, Lawrence-Hilton</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23758'>Jason, Leigh</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5968'>Jongbloed, Marijke</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=25804'>Jacobsen, Johan</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=23517'>Jason, Will</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5970'>Jónsson, Thorsteinn</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person25804'>Jacobsen, Johan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23517'>Jason, Will</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5970'>Jónsson, Thorsteinn</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=27080'>Jacobson, Kristi</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=21169'>Javellas, Giorgos</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=27854'>Jonze, Spike</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person27080'>Jacobson, Kristi</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person21169'>Javellas, Giorgos</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person27854'>Jonze, Spike</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5804'>Jacoby, Georg</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5864'>Jayatilaka, Amarnath</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5973'>Jordan, Glenn</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5804'>Jacoby, Georg</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5864'>Jayatilaka, Amarnath</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5973'>Jordan, Glenn</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=14262'>Jacoby, Roger</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5866'>Jaziri, Fadhel</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=13549'>Jordan, Margaret</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14262'>Jacoby, Roger</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5866'>Jaziri, Fadhel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13549'>Jordan, Margaret</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=14073'>Jacopetti, Gualtiero</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5876'>Jeles, András</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=33308'>Jordan, Mary</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14073'>Jacopetti, Gualtiero</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5876'>Jeles, András</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person33308'>Jordan, Mary</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5807'>Jacquot, Benoît</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5881'>Jennings, Humphrey</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5975'>Jordan, Neil</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5807'>Jacquot, Benoît</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5881'>Jennings, Humphrey</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5975'>Jordan, Neil</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5809'>Jaeckin, Just</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=30483'>Jensen, Anders Thomas</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=23570'>Joreige, Khalil</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5809'>Jaeckin, Just</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person30483'>Jensen, Anders Thomas</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23570'>Joreige, Khalil</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5811'>Jafelice, Raymond</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=14617'>Jerome,</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=29015'>Josipovici, Jean</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5811'>Jafelice, Raymond</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14617'>Jerome,</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29015'>Josipovici, Jean</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5814'>Jaglom, Henry</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=458'>Jessua, Alain</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5981'>Jost, Jon</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5814'>Jaglom, Henry</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person458'>Jessua, Alain</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5981'>Jost, Jon</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5818'>Jaibi, Fadhel</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5889'>Jeunet, Jean-Pierre</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=14337'>Jourdan, Pierre</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5818'>Jaibi, Fadhel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5889'>Jeunet, Jean-Pierre</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14337'>Jourdan, Pierre</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5823'>Jakubisko, Juraj</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=24474'>Jewell, Austen</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=6014'>Jud, Reinhard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5823'>Jakubisko, Juraj</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24474'>Jewell, Austen</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6014'>Jud, Reinhard</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=26968'>Jaløiløi, Abøu al-Fazl</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5891'>Jewison, Norman</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=20464'>Judge, Mike</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26968'>Jaløiløi, Abøu al-Fazl</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5891'>Jewison, Norman</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20464'>Judge, Mike</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5826'>Jamain, Patrick</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5898'>Jiménez-Leal, Orlando</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=14632'>Jumdaan, Choymbolyn</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5826'>Jamain, Patrick</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5898'>Jiménez-Leal, Orlando</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14632'>Jumdaan, Choymbolyn</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5829'>James, Ashley</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5907'>Jires, Jaromil</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=6032'>Jung-Alsen, Kurt</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5829'>James, Ashley</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5907'>Jires, Jaromil</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6032'>Jung-Alsen, Kurt</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5830'>James, Bob</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5911'>Joannon, Léo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=24432'>Juran, Nathan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5830'>James, Bob</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5911'>Joannon, Léo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24432'>Juran, Nathan</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5832'>Jameson, Jerry</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5916'>Joffé, Arthur</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=6051'>Justiniano, Gonzalo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5832'>Jameson, Jerry</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5916'>Joffé, Arthur</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6051'>Justiniano, Gonzalo</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5833'>Jancsó, Miklós</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=5770'>Jóhannesdóttir, Kristín</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=6055'>Jutra, Claude</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5833'>Jancsó, Miklós</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5770'>Jóhannesdóttir, Kristín</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6055'>Jutra, Claude</a></td>
       </tr>
     </table>
   </div>
