--- a/WebContent/include/browsedirOlist.jspf
+++ b/WebContent/include/browsedirOlist.jspf
@@ -3,113 +3,113 @@
   <div id='browselist' name='browselist'>
     <table id='browseTable' name='browseTable'>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8699'>O'Brien, John</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8788'>Olivier, Laurence</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=14699'>Osone, Tatsuo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8699'>O'Brien, John</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8788'>Olivier, Laurence</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14699'>Osone, Tatsuo</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=22878'>O'Connor, Gavin</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=16952'>Oller, Rafael</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=13498'>Osten, Franz</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person22878'>O'Connor, Gavin</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person16952'>Oller, Rafael</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13498'>Osten, Franz</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=17444'>O'Connor, Geoffrey</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8792'>Olmi, Ermanno</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=24492'>Oswald, Gerd</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person17444'>O'Connor, Geoffrey</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8792'>Olmi, Ermanno</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24492'>Oswald, Gerd</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8705'>O'Hara, Gerry</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8793'>Olmos, Edward James</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=13067'>Ota, Kei</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8705'>O'Hara, Gerry</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8793'>Olmos, Edward James</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13067'>Ota, Kei</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=26161'>O'Keefe, Denis</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8794'>Olofson, Christina</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=26334'>Ôtani, Kentarô</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26161'>O'Keefe, Denis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8794'>Olofson, Christina</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26334'>Ôtani, Kentarô</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8709'>O'Malley, David</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8796'>Olsen, William</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8868'>Othenin-Girard, Dominique</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8709'>O'Malley, David</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8796'>Olsen, William</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8868'>Othenin-Girard, Dominique</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8712'>O'Neill, Robert Vincent</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=16224'>Olson, Jenni</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8870'>Otomo, Katsuhiro</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8712'>O'Neill, Robert Vincent</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person16224'>Olson, Jenni</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8870'>Otomo, Katsuhiro</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8725'>Oboler, Arch</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8797'>Olsson, Claes</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8871'>Ott, Thomas</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8725'>Oboler, Arch</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8797'>Olsson, Claes</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8871'>Ott, Thomas</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8731'>Ochs, Jacki</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=17198'>Ono, Yoko</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8872'>Ottarsdóttir, Katrin</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8731'>Ochs, Jacki</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person17198'>Ono, Yoko</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8872'>Ottarsdóttir, Katrin</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8732'>Ockersen, Thijs</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8812'>Onteniente, Fabien</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8874'>Ottinger, Ulrike</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8732'>Ockersen, Thijs</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8812'>Onteniente, Fabien</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8874'>Ottinger, Ulrike</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=89'>Oddsson, Hilmar</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8814'>Oosthoek, Peter</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8875'>Ottoni, Filippo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person89'>Oddsson, Hilmar</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8814'>Oosthoek, Peter</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8875'>Ottoni, Filippo</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8737'>Odermatt, Urs</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8817'>Ophüls, Marcel</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8877'>Ouedraogo, Idrissa</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8737'>Odermatt, Urs</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8817'>Ophüls, Marcel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8877'>Ouedraogo, Idrissa</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8738'>Odorisio, Luciano</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8818'>Ophüls, Max</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8880'>Oury, Gérard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8738'>Odorisio, Luciano</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8818'>Ophüls, Max</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8880'>Oury, Gérard</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=29886'>Odoul, Damien</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=18634'>Oppenheim, Meret</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=22945'>Outerbridge, David E.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29886'>Odoul, Damien</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person18634'>Oppenheim, Meret</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person22945'>Outerbridge, David E.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=13487'>Oedekerk, Steve</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=26216'>Oppenheimer, Evan</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=20204'>Ové, Horace</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13487'>Oedekerk, Steve</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26216'>Oppenheimer, Evan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20204'>Ové, Horace</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=32596'>Oertel, Curt</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12929'>Ordoñez, Victor</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=26458'>Owen, Cliff</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person32596'>Oertel, Curt</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12929'>Ordoñez, Victor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26458'>Owen, Cliff</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8757'>Okazaki, Steven</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8828'>Ordynsky, Vasili</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8885'>Owen, Don</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8757'>Okazaki, Steven</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8828'>Ordynsky, Vasili</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8885'>Owen, Don</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8759'>Oki, Hiroyuki</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8830'>Orfini, Mario</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8886'>Owusu, Kwesi</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8759'>Oki, Hiroyuki</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8830'>Orfini, Mario</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8886'>Owusu, Kwesi</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8768'>Olea, Pedro</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8834'>Orkin, Ruth</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=33745'>Ozerov, Yuri</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8768'>Olea, Pedro</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8834'>Orkin, Ruth</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person33745'>Ozerov, Yuri</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8772'>Olhovich, Sergio</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=27692'>Orloff, Cliff</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8856'>Özkan, Yavuz</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8772'>Olhovich, Sergio</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person27692'>Orloff, Cliff</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8856'>Özkan, Yavuz</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8778'>Oliveira, Manoel de</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=26316'>Oshii, Mamoru</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8892'>Ozu, Yasujiro</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8778'>Oliveira, Manoel de</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26316'>Oshii, Mamoru</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8892'>Ozu, Yasujiro</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8787'>Olivera, Héctor</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=8854'>Oshima, Nagisa</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8787'>Olivera, Héctor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8854'>Oshima, Nagisa</a></td>
         <td></td>
       </tr>
     </table>
