--- a/WebContent/include/browsedirQlist.jspf
+++ b/WebContent/include/browsedirQlist.jspf
@@ -3,22 +3,22 @@
   <div id='browselist' name='browselist'>
     <table id='browseTable' name='browseTable'>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=20469'>Quakenbush, Corky</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=25620'>Queeny, Edgar Monsanto</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=9536'>Quinn, Bob</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20469'>Quakenbush, Corky</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person25620'>Queeny, Edgar Monsanto</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9536'>Quinn, Bob</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=30228'>Quale, Steven</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=26168'>Quile, Luis Antonio Rosario</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=24819'>Quintos, Rory B.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person30228'>Quale, Steven</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26168'>Quile, Luis Antonio Rosario</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24819'>Quintos, Rory B.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=9525'>Quay, Stephen</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=9535'>Quine, Richard</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=23123'>Quliqtalik, Pauloosie</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9525'>Quay, Stephen</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9535'>Quine, Richard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23123'>Quliqtalik, Pauloosie</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=17901'>Quay, Timothy</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person17901'>Quay, Timothy</a></td>
         <td></td>
         <td></td>
       </tr>
