--- a/WebContent/include/browsedirUlist.jspf
+++ b/WebContent/include/browsedirUlist.jspf
@@ -3,32 +3,32 @@
   <div id='browselist' name='browselist'>
     <table id='browseTable' name='browseTable'>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=22712'>Ugaz, Marite</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12936'>Ün, Memduh</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=11928'>Urgelles, Thaelman</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person22712'>Ugaz, Marite</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12936'>Ün, Memduh</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11928'>Urgelles, Thaelman</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=11897'>Ujica, Andrei</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=22327'>Un-gyu Ra</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=28489'>Usmonov, Jamshed</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11897'>Ujica, Andrei</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person22327'>Un-gyu Ra</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person28489'>Usmonov, Jamshed</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=11900'>Ullmann, Liv</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=11910'>Underwood, Ron</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=11936'>Ustinov, Peter</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11900'>Ullmann, Liv</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11910'>Underwood, Ron</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11936'>Ustinov, Peter</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=11901'>Ulloa, Juanma Bajo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=19113'>Ungerer, Walter</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=32533'>Uyarra, Esteban</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11901'>Ulloa, Juanma Bajo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person19113'>Ungerer, Walter</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person32533'>Uyarra, Esteban</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=11903'>Ulmer, Edgar G.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=11919'>Uralov, Oleg</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=11939'>Uys, Jamie</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11903'>Ulmer, Edgar G.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11919'>Uralov, Oleg</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11939'>Uys, Jamie</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=14562'>Umam, Chaerul</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14562'>Umam, Chaerul</a></td>
         <td></td>
         <td></td>
       </tr>
