--- a/WebContent/include/browsedirVlist.jspf
+++ b/WebContent/include/browsedirVlist.jspf
@@ -3,157 +3,157 @@
   <div id='browselist' name='browselist'>
     <table id='browseTable' name='browseTable'>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=11951'>Vadim, Roger</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=29266'>Védrès, Nicole</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=24048'>Viertel, Berthold</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11951'>Vadim, Roger</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29266'>Védrès, Nicole</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24048'>Viertel, Berthold</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=29147'>Vajda, Ladislao</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12015'>Veiel, Andres</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12102'>Vigo, Jean</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29147'>Vajda, Ladislao</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12015'>Veiel, Andres</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12102'>Vigo, Jean</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=11965'>Valdés, Oscar L.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12023'>Velde, Jean van de</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=18898'>Vilardebo, Carlos</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11965'>Valdés, Oscar L.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12023'>Velde, Jean van de</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person18898'>Vilardebo, Carlos</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=12928'>Valletta, Al</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=27200'>Vendemmiati, Alberto</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12109'>Villaronga, Agustín</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12928'>Valletta, Al</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person27200'>Vendemmiati, Alberto</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12109'>Villaronga, Agustín</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=741'>Van Ackeren, Robert</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=30474'>Veneruso, Stefano</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12110'>Villaverde, Teresa</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person741'>Van Ackeren, Robert</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person30474'>Veneruso, Stefano</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12110'>Villaverde, Teresa</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=24724'>van Dalen, Roel</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=24158'>Venier, Massimo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=26184'>Villeneuve, Denis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24724'>van Dalen, Roel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24158'>Venier, Massimo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26184'>Villeneuve, Denis</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=28600'>van der Hout, André</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12034'>Vennerød, Petter</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12113'>Villiers, François</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person28600'>van der Hout, André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12034'>Vennerød, Petter</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12113'>Villiers, François</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=6333'>van der Keuken, Johan</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12035'>Ventura, Michael</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12114'>Vilsmaier, Joseph</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6333'>van der Keuken, Johan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12035'>Ventura, Michael</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12114'>Vilsmaier, Joseph</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=8009'>van der Meulen, Karst</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=25724'>Venturi, Lauro</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=16050'>Vincent, James</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8009'>van der Meulen, Karst</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person25724'>Venturi, Lauro</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person16050'>Vincent, James</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=20926'>van der Oest, Paula</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12039'>Vera, Luis R.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12120'>Vint, Jesse</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20926'>van der Oest, Paula</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12039'>Vera, Luis R.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12120'>Vint, Jesse</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=21613'>van Dienderen, An</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12047'>Verdone, Carlo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12121'>Vinton, Will</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person21613'>van Dienderen, An</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12047'>Verdone, Carlo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12121'>Vinton, Will</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=3657'>Van Dyke, W. S.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12055'>Verhaag, Bertram</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=19501'>Viola, Joe</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3657'>Van Dyke, W. S.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12055'>Verhaag, Bertram</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person19501'>Viola, Joe</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=28591'>Van Effenterre, Joële</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=29993'>Verheyde, Sylvie</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12125'>Virzi, Paolo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person28591'>Van Effenterre, Joële</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29993'>Verheyde, Sylvie</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12125'>Virzi, Paolo</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=5534'>Van Horn, Buddy</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12063'>Verhoeven, Paul</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12127'>Visconti, Eriprando</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5534'>Van Horn, Buddy</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12063'>Verhoeven, Paul</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12127'>Visconti, Eriprando</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=6851'>Van Lamsweerde, Pino</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12067'>Verneuil, Henri</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12128'>Visconti, Luchino</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6851'>Van Lamsweerde, Pino</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12067'>Verneuil, Henri</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12128'>Visconti, Luchino</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=6999'>van Leeuwaarden, Mildred</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12070'>Veroiu, Mircea</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=14389'>Viswanadhan, Velu</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6999'>van Leeuwaarden, Mildred</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12070'>Veroiu, Mircea</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14389'>Viswanadhan, Velu</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=10304'>Van Sant, Gus</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12071'>Verona, Stephen F.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=30402'>Vithanage, Prasanna</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10304'>Van Sant, Gus</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12071'>Verona, Stephen F.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person30402'>Vithanage, Prasanna</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=11977'>Vancini, Florestano</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=29815'>Verow, Todd</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12145'>Vlácil, Frantisek</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11977'>Vancini, Florestano</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29815'>Verow, Todd</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12145'>Vlácil, Frantisek</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=17519'>Vanderbeek, Stan</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12076'>Verstappen, Wim</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=15576'>Vohrer, Alfred</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person17519'>Vanderbeek, Stan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12076'>Verstappen, Wim</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person15576'>Vohrer, Alfred</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=11986'>Vanzina, Carlo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=199'>Vertov, Dziga</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=24836'>Voinov, Konstantin</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11986'>Vanzina, Carlo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person199'>Vertov, Dziga</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24836'>Voinov, Konstantin</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=112'>Varda, Agnès</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=20440'>Vester, Paul</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12157'>Volev, Nikolaj</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person112'>Varda, Agnès</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20440'>Vester, Paul</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12157'>Volev, Nikolaj</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=20653'>Vardaros, Leonidas</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12081'>Veuve, Jacqueline</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12160'>Volkoff, Alexandre</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20653'>Vardaros, Leonidas</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12081'>Veuve, Jacqueline</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12160'>Volkoff, Alexandre</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=20428'>Varga, Csaba</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=21203'>Viala, Victor</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=20047'>von Eschwege, Alexander</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20428'>Varga, Csaba</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person21203'>Viala, Victor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20047'>von Eschwege, Alexander</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=29323'>Vari, Giuseppe</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12084'>Viana, Zelito</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=4295'>von Fritsch, Gunther</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29323'>Vari, Giuseppe</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12084'>Viana, Zelito</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4295'>von Fritsch, Gunther</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=11989'>Varnel, Marcel</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12087'>Viany, Alex</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=26153'>von Gunten, Peter</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11989'>Varnel, Marcel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12087'>Viany, Alex</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26153'>von Gunten, Peter</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=21439'>Vasiliev, Vladimir</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=23270'>Vicario, Marco</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=9436'>von Praunheim, Rosa</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person21439'>Vasiliev, Vladimir</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23270'>Vicario, Marco</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9436'>von Praunheim, Rosa</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=26241'>Vasudev, Kamur</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=24321'>Vicas, Victor</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=11194'>Von Sternberg, Josef</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26241'>Vasudev, Kamur</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24321'>Vicas, Victor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11194'>Von Sternberg, Josef</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=17170'>Vaughn, E. J.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12091'>Vidor, Charles</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=23973'>Vorhaus, Bernard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person17170'>Vaughn, E. J.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12091'>Vidor, Charles</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23973'>Vorhaus, Bernard</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=26569'>Vautier, René</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12092'>Vidor, King</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12174'>Voulgaris, Pantelis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26569'>Vautier, René</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12092'>Vidor, King</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12174'>Voulgaris, Pantelis</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=11943'>Vávra, Otakar</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12096'>Vienne, Gérard</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12185'>Vukotic, Dusan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11943'>Vávra, Otakar</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12096'>Vienne, Gérard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12185'>Vukotic, Dusan</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=12007'>Vecchiali, Paul</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12007'>Vecchiali, Paul</a></td>
         <td></td>
         <td></td>
       </tr>
