--- a/WebContent/include/browsetitleZlist.jspf
+++ b/WebContent/include/browsetitleZlist.jspf
@@ -2,347 +2,347 @@
         <table id='browseTable' name='browseTable'>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23987'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23987'>
                  Z
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=39'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm39'>
                  Zemlia
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=27527'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm27527'>
                  Zivot a neobycejna dobrodruzstvi vojaka Ivana Conkina
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=28612'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm28612'>
                  Za ondekoza
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29197'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29197'>
                  Zemma
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29137'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29137'>
                  Zlocin v santánu
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29702'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29702'>
                  Za sciana
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=31129'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm31129'>
                  Zemsta
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29265'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29265'>
                  Zmierc prezydenta
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23748'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23748'>
                  Zabriskie Point
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23843'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23843'>
                  Zendegi va digar hich
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29454'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29454'>
                  Znoy
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29124'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29124'>
                  Zagovor obrechyonnikh
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=6736'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm6736'>
                  Zentropa
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=28899'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm28899'>
                  Zofia
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23766'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23766'>
                  Zai na hepan qingcao qing
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23847'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23847'>
                  Zerkalo
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=18522'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm18522'>
                  Zoku Sugata Sanshiro
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=24981'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm24981'>
                  Zaibo nusviesti
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23709'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23709'>
                  Zéro de conduite
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=27069'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm27069'>
                  Zolgot hadama'ot me'atzman
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23774'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23774'>
                  Zakon
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=26039'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm26039'>
                  Zero degrees latitude
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23916'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23916'>
                  Zombie and the ghost train
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=89'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm89'>
                  Zakroishchik iz Torzhka
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23709'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23709'>
                  Zero for conduct
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23916'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23916'>
                  Zombie ja kummitusjuna
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=28294'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm28294'>
                  Zamboanga
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=28397'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm28397'>
                  Zero to sixty
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23934'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23934'>
                  Zoo
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23783'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23783'>
                  Zamri - umri - voskresni
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29715'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29715'>
                  Zhertva vechernyaya
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23944'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23944'>
                  Zu neuen ufern
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29518'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29518'>
                  Zang-e tafrih
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29534'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29534'>
                  Zhivyot takoj paren
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29606'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29606'>
                  Zui hou de gui zu
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23787'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23787'>
                  Zangiku monogatari
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=25204'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm25204'>
                  Ziegfeld follies
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=28508'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm28508'>
                  Zuiderzeewerken
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=28293'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm28293'>
                  Zanzabuku
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29593'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29593'>
                  Ziemia obiecana
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=65'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm65'>
                  Zvenigora
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29263'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29263'>
                  Závrat
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=26703'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm26703'>
                  Zigeunerweisen
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=26224'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm26224'>
                  Zwei wege
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=28559'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm28559'>
                  Zazdrosc i medycyna
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=31075'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm31075'>
                  Ziggy Stardust and the Spiders from Mars
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=25671'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm25671'>
                  Zwischen betonfahrten
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=28453'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm28453'>
                  Zdjecia probne
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23882'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23882'>
                  Zina
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23981'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23981'>
                  Zwischen zwei kriegen
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23819'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23819'>
                  Zebrahead
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=27593'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm27593'>
                  Zirat Ha'rezach
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29704'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29704'>
                  Zycie jako smiertelna choroba przenoszona droga plciowa
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23824'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23824'>
                  Zegen
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23885'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23885'>
                  Ziré darâkhtân zeyton
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=24'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm24'>
                  Zycie rodzinne
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23827'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23827'>
                  Zeit der götter
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=26839'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm26839'>
                  Ziveli! Medicine for the heart
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=30189'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm30189'>
                  De Zaak Alzheimer
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=23837'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm23837'>
                  Zelig
               </a>
             </td>
