--- a/WebContent/include/browsedirYlist.jspf
+++ b/WebContent/include/browsedirYlist.jspf
@@ -3,68 +3,68 @@
   <div id='browselist' name='browselist'>
     <table id='browseTable' name='browseTable'>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=20406'>Yaguchi, Shinobu</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=6001'>Yeaworth, Irvin S.,</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12685'>Young, Robert M.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20406'>Yaguchi, Shinobu</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6001'>Yeaworth, Irvin S.,</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12685'>Young, Robert M.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=12610'>Yamakawa, Naoto</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=30116'>Yee, Chin-yen</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12684'>Young, Robert</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12610'>Yamakawa, Naoto</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person30116'>Yee, Chin-yen</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12684'>Young, Robert</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=34123'>Yamamoto, Kenji</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=29969'>Yehuda, Sigal</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12688'>Young, Terence</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person34123'>Yamamoto, Kenji</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29969'>Yehuda, Sigal</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12688'>Young, Terence</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=12611'>Yamamoto, Masashi</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12648'>Yersin, Yves</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=15437'>Young, W. W.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12611'>Yamamoto, Masashi</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12648'>Yersin, Yves</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person15437'>Young, W. W.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=12598'>Yan Xueshu</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=28072'>Yi Chang</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=29365'>Youngson, Robert</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12598'>Yan Xueshu</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person28072'>Yi Chang</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29365'>Youngson, Robert</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=12622'>Yanagimachi, Mitsuo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12656'>Yilmaz, Atif</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=28648'>Yu Lik-Wai, Nelson</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12622'>Yanagimachi, Mitsuo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12656'>Yilmaz, Atif</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person28648'>Yu Lik-Wai, Nelson</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=14358'>Yang Teh-ch'ang,</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=19427'>Yimou, Zhang</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=16442'>Yu Xiangyuan,</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14358'>Yang Teh-ch'ang,</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person19427'>Yimou, Zhang</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person16442'>Yu Xiangyuan,</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=3984'>Yang, Fengliang</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=15725'>Yorkin, Bud</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=24827'>Yu Yong-sik</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3984'>Yang, Fengliang</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person15725'>Yorkin, Bud</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24827'>Yu Yong-sik</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=12628'>Yanne, Jean</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12676'>Yoshida, Yoshishige</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=118'>Yu, Dennis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12628'>Yanne, Jean</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12676'>Yoshida, Yoshishige</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person118'>Yu, Dennis</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=15726'>Yarbrough, Jean</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=394'>Yossifova, Iskra</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=13856'>Yü, Pen-cheng</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person15726'>Yarbrough, Jean</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person394'>Yossifova, Iskra</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13856'>Yü, Pen-cheng</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=24101'>Yavuz, Yüksel</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12678'>Young, Andrew</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=26867'>Yüce, Ihsan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24101'>Yavuz, Yüksel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12678'>Young, Andrew</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26867'>Yüce, Ihsan</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=12643'>Yazaki, Hitoshi</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12681'>Young, Freddie</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=12704'>Yukol, Chatri Chalerm</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12643'>Yazaki, Hitoshi</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12681'>Young, Freddie</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12704'>Yukol, Chatri Chalerm</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=29989'>Yazdani, Shahin</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=15723'>Young, Harold</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29989'>Yazdani, Shahin</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person15723'>Young, Harold</a></td>
         <td></td>
       </tr>     
     </table>
