--- a/WebContent/include/browsetitleQlist.jspf
+++ b/WebContent/include/browsetitleQlist.jspf
@@ -2,352 +2,352 @@
         <table id='browseTable' name='browseTable'>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=27873'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm27873'>
                  Qaggiq
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=30185'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm30185'>
                  Quase dois irmãos
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17277'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17277'>
                  Quiet days in Clichy
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=30354'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm30354'>
                  Qian li zou dan qi
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=28134'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm28134'>
                  Quase nada
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=21208'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm21208'>
                  Quiet flows the Don
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=25019'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm25019'>
                  Qian'niu hua
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=26931'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm26931'>
                  Quasi's cabaret trailer
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=30039'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm30039'>
                  Quiet weekend
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=24958'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm24958'>
                  Qin song
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29835'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29835'>
                  Quatorze Juillet
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=26949'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm26949'>
                  Quinoscopio No.2
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29605'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29605'>
                  Qing liang si zhong sheng
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17229'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17229'>
                  Quatre aventures de Reinette et Mirabelle
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17287'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17287'>
                  Quintet
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29625'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29625'>
                  Qingchun
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=26986'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm26986'>
                  Quatre d'entre elles
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=30387'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm30387'>
                  Quixote
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17190'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17190'>
                  Qingchun ji
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17232'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17232'>
                  Quatre nuits d'un rêveur
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17289'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17289'>
                  Quiz show
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29743'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29743'>
                  Qingmei zhuma
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=26621'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm26621'>
                  ¿Que hacer?
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17201'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17201'>
                  Le quai des brumes
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17267'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17267'>
                  Qiu Jin
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17196'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17196'>
                  Qué he hecho yo para merecer esto?!!
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17230'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17230'>
                  Les quatre cents coups
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17267'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17267'>
                  Qiu Jin : A revolutionary
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=26899'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm26899'>
                  Que la bête meure
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29937'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29937'>
                  Les quatre vérités
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17193'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17193'>
                  Qiu Ju da guan si
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17243'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17243'>
                  Que viva Mexico!
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=25953'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm25953'>
                  The queen
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=28974'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm28974'>
                  Qiu jue
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29658'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29658'>
                  Queen of the circus
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29651'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29651'>
                  The queen of modern times
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=28988'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm28988'>
                  Qiu tian de tong hua
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=30093'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm30093'>
                  Queen of the seas
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29950'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29950'>
                  The Queen of Sheba
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17194'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17194'>
                  Qiuyue
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=28793'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm28793'>
                  Queen of the Yukon
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=60'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm60'>
                  The queen of spades
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=27531'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm27531'>
                  Qiyue tian
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17253'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17253'>
                  Queimada!
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=27768'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm27768'>
                  The Queen's Guards
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=25965'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm25965'>
                  Qu ru ku duo
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=30050'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm30050'>
                  Quel bandito sono io
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=27392'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm27392'>
                  The queens
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=27353'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm27353'>
                  Quadrille
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=29430'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm29430'>
                  Quem é Beta?
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=27765'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm27765'>
                  The quiet duel
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17202'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17202'>
                  Quai des Orfèvres
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17259'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17259'>
                  Querelle
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17280'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17280'>
                  The quiet man
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17203'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17203'>
                  Qualcosa di biondo
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=26675'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm26675'>
                  Querelle de jardins
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=17281'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm17281'>
                  The quiet one
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=30339'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm30339'>
                  Qualcuno ha tradito
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=26932'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm26932'>
                  Quest: a long ray's journey into light
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=30767'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm30767'>
                  The quiet room
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=25828'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm25828'>
                  Quand tu liras cette lettre
               </a>
             </td>
             <td>
-              <a href='/cinefiles/FilmDetail?filmId=30386'>
+              <a href='/cinefiles/FilmDetail?filmId=pfafilm30386'>
                  Quick Billy
               </a>
             </td>
